examples/test/testpolicy2594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2594
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key16: value47
      key29: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value38
          key38: value34
      podSelector:
        matchLabels:
          key20: value9
          key42: value22
